--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 p{
 font-size: 40px;
-
+margin: 0%;
 }
 
 
@@ -9,7 +9,7 @@ font-size: 40px;
 p{
 color:green;
 font-size: 22px;
-
+margin: 0%;
 } 
 }
 
