--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,20 @@
-.box{
-border: solid 6px #8b008b;  
-display: inline-block;
-position: fixed 20%;
-margin-top: 0%;
+header{
+background-color: rgb(139,0, 139);
+height: 20%;
+width: 100%;
+position: fixed;
+color: rgb(139,0, 139);
 }
+*{
+margin: 0%;
+padding: 0%;
+top: 0%;
+bottom: 0%;
+
+
+}
+
+
+
 
 
