--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,50 @@
-header{
-background-color: rgb(139,0, 139);
-height: 20%;
-width: 100%;
-position: fixed;
-color: rgb(139,0, 139);
-}
-*{
-margin: 0%;
-padding: 0%;
-top: 0%;
-bottom: 0%;
-
-
+body{
+background-color:#232552; 
+color:white;}
+h1{
+display: inline-block;
+margin-left: 200px;
+margin-top: 170px;
 }
 
+.text-1{
+display: inline-block;  
+width: 500px ;
+margin-left: 200px;
+}
+.text-1{
+margin-top: -10px;
+}
+.knopochka-1{
+background-color: #00bfff;
+display: inline-block;
+width:100px
+}
+.one{
+margin-top: 300px;
+margin-left: 230px;
+}
+.text-2{
+width: 350px;
+margin-left: 200px;
+}
+.two{
+margin-left: 700px;    
+margin-top: -158px;
+}
+.text-3{
+width: 350px;
+margin-left: 680px;
+}
+.three{
+margin-left: 1300px;    
+margin-top: -170px;
 
-
+}
+.text-4{
+width: 350px;    
+margin-left: 1250px;
+margin-top: -15px;
+}
 
 
