Форматирование кода в соответствии со стандартом

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
-body{
-    text-transform: uppercase;    
+body {
+    text-transform: uppercase;
     background-color: #252525;
+    color:white;
+}
+h1 {
+    font-size: 250%;
+    font-family: arial;
 }
