--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,5 @@
-
-* {
+-* {
     font-family: 'Raleway', sans-serif;
-}
-body {
-    background-color: #252525;
-    color: white;
 }
 .one-line {
     font-weight: 100;
@@ -16,21 +11,40 @@ body {
     font-weight: 700;
     font-size: 400%;
     text-align: center;
-    margin-top: -3%;
+    margin-top: -2%;
     line-height: 0.90;
 }
 .header, .title {
     text-transform: uppercase;
+    background-color: #252525;
+    color: #fff;
+}
+.title{
+    padding-bottom: 22.5%;
 }
 .header {
     font-size: 200%;
     margin-top: -1%;
     font-weight: 500;
     padding: 2%;
+    height: 2.5%;
+}
+.one-block{
+    background-color: #252525;
+    height: 100%;
+}
+.two-block{
+    background-color: #fff;
+    padding: 0% 20%;
+}
+.three-line{
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 10%;
 }
 @media (max-width: 760px) {
     .two-line{
-        margin-top: -7%;
+        margin-top: -6%;
         line-height: 0.9;
     }
     .one-line{
