--- a/css/style.css
+++ b/css/style.css
@@ -1,166 +1,19 @@
 *{
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Nunito', sans-serif;
 }
-.one-line{
-    font-weight: 100;
-    font-size: 400%;
-    text-align: center;
-    margin-top: 10%;
-}
-.two-line{
+.text-header{
+    color: 	#012970;
+    font-size: 30px;
     font-weight: 700;
-    font-size: 400%;
-    text-align: center;
-    margin-top: -2%;
-    line-height: 0.90;
-}
-.header, .title{
-    text-transform: uppercase;
-    background-color: #252525;
-    color: #fff;
-}
-.title{
-    padding-bottom: 22.5%;
 }
 .header{
-    font-size: 200%;
-    margin-top: -1%;
-    font-weight: 500;
-    padding: 2%;
-    height: 2.5%;
+    display: inline-block;
 }
-.one-block{
-    background-color: #252525;
-    height: 100%;
+.img-1{
+    margin-bottom: 9%;
+    display: inline-block;
 }
-.two-block{
-    background-color: #fff;
-    padding: 0% 20%;
-}
-.three-line{
-    text-transform: uppercase;
-    margin-top: 10%;
-    font-size: 300%;
-    margin-left: 29%;
-}
-.three-line-one{
-    width: 40%;
-    margin-left: 30%;
-}
-.three-block{
-    background-color:#252525;
-    color: white;
-    height: 100%;
-    text-transform: uppercase;
-}
-.four-line{
-    margin-top: 23%;
-    text-align: center;
-    font-size: 300%;
-    padding: 10%;
-    padding-top: 5%;
-}
-.five-line{
-    font-size: 250%;
-    text-align: center;
-    margin-top: -12.5%;
-    padding-bottom: 10%;
-}
-.six-line{
-    text-transform: uppercase;
-    margin-left: 37%;
-    font-size: 300%;
-    margin-top: 5%;
-}
-.seven-line{
-    width: 30%;
-    margin-left: 37%;
-}
-.five-block{
-    text-transform: uppercase;
-    background-color:#252525;
-    color:white;
-    padding: 30%;
-    margin-top:50%;
-}
-.eight-line{
-    margin-top: -65%;
-    font-size: 300%;
-    margin-left: 18%;
-}
-.back{
-    font-size: 300%;
-    margin-top: -16%;
-    margin-left: 15%;
-    opacity: 30%;
-}
-.nine-line{
-    font-size: 200%;
-    margin-top: 20%;
-    margin-left: 33%;
-}
-.back-2{
-    opacity: 30%;
-    font-size: 200%;
-    margin-top: -13%;
-    margin-left: 45%;
-}
-.bucks{
-    font-size: 800%;
-    color:rgb(189, 42, 194);
-    text-align: center;
-}
-.six-block{
-    background-color:#252525;
-    color:white;
-    padding-bottom: 1%;
-}
-.footer-title{
-    text-transform: uppercase;
-    font-size: 150%;
-    margin-top: -10%;
-    margin-left: 16%;
-}
-.footer-text{
-    font-size: 110%;
-    width: 1%;
-    margin-left:16%;
-}
-.footer-title-1{
-    text-transform: uppercase;
-    font-size: 150%;
-    margin-left: 36%;
-    margin-top: -13.6%;
-    padding-bottom: 20%;
-}
-.footer-text-1{
-    font-size: 110%;
-    width: 2%;
-    margin-left: 36%;
-    margin-top: -20%;
-    padding-bottom: 20%;
-}
-.footer-text-2{
-margin-left: 15%;
-
-}
-.ya-share2{
-    margin-left: 70%;
-    margin-bottom: 5%;
-    padding-bottom: 0%;
-}
-@media (max-width: 500px) {
-    .two-line{
-    line-height: 0.9;
-    }
-    .one-line{
-        line-height: 0.9;
-    }
-    .three-line{
-        margin-left: -18%;
-    }
-    .three-line-one{
-        width: 150%;
-        margin-left: -15%;
-    }
+button{
+    text-decoration: none;
+    color:#012970;
 }
