--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body{
     font-family: 'Nunito', sans-serif;
-    
 }
 .textheaderone{
     font-size: 30px;
@@ -22,4 +21,10 @@ body{
     background-color: blueviolet;
     color: white;
 }
-
+.imgtwo{
+    margin-top: 5%;
+}
+.textone{
+    font-size: 50px;
+    margin-bottom: 20%;
+}
