--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Nunito', sans-serif;
+
 }
 .textheaderone{
     font-size: 30px;
@@ -8,7 +9,7 @@ body{
     margin-top: 1%;
 }
 .imgone{
-    display: inline;
+
 }
 .buttonone{
     text-decoration: none;
@@ -21,10 +22,15 @@ body{
     background-color: blueviolet;
     color: white;
 }
-.imgtwo{
-    margin-top: 5%;
-}
 .textone{
-    font-size: 50px;
-    margin-bottom: 20%;
+    font-size: 60px;
+    margin-top: 10%;
+    color:#012970;
+}
+.imgbody{
+    margin-bottom: 10%;
+    display:inline ;
+}
+.bodytext{
+    display: inline;
 }
