--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body{
 }
 .title{
     display: inline-block;
-    margin-bottom: 10%
+    margin-bottom: 20%;
     margin-left: 50px;
     font-size: 60px;
 }
