--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body{
     font-family: 'Nunito', sans-serif;
 }
-
 .text-logo{
     display: inline;
     font-size: 30px;
@@ -11,16 +10,8 @@ body{
 .img-header{
     margin-left: 9%;
 }
-.header-link{
-    display: inline;
-    text-decoration: none;
-    color: #012970;
-    font-size: 20px;
-    font-weight: 700;
-    margin-left: 10%;
-}
+    
 .header-link-1{
-    display:inline;
     color: #012970;
     text-decoration: none;
     font-size: 20px;
@@ -37,16 +28,15 @@ body{
     margin-left: 2%;
 }
 .title{
-    display: inline-block;
     margin-bottom: 20%;
-    margin-left: 50px;
-    font-size: 30px;
-    width: 40%
-    height:40%
+    margin-left: 3%;
+    font-size: 35px;
+    width:  40%;
+    height: 40%;
 }
 .content-img{
-    margin-left: 60%;
-    margin-top: -70%;
-    margin-bottom: 10%;
-    margin-right: 20%;
+    margin-left: 50%;
+    margin-top: -80%;
+    margin-bottom: 9%;
+    width: 40%;
 }
