--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,7 @@ body{
     margin-left: 2%;
 }
 .title{
-    margin-left: 3%;
-    font-size: 35px;
+    font-size: 30px;
     width:  40%;
     height: 40%;
 }
@@ -34,5 +33,5 @@ body{
 }
 .body{
     padding: 0% 10%;
-    margin-top: 15%;
+    margin-top:7.5%
 }
